@@ -10,3 +10,4 @@ Raphael Kubo da Costa <kubo@profusion.mobi>
 Mathieu Taillefumier <mathieu.taillefumier@free.fr>
 Albin "Lutin" Tonnerre <albin.tonnerre@gmail.com>
 Adam Simpkins <adam@adamsimpkins.net>
+Mike Blumenkrantz <mike@zentific.com>
